adding changes to navbar

--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
-							<a class="nav-link" id="act1" href="gallery.html">Gallery<span
+							<a class="nav-link" id="act1" href="gallery.html">Our Products<span
 									class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
-					<h1 class="hero__title u-font-serif" data-aos="zoom-in">Gallery</h1>
+					<h1 class="hero__title u-font-serif" data-aos="zoom-in">Our Products</h1>
 				</div>
 			</div>
 		</div>
