--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
-							<a class="nav-link" href="gallery.html">Gallery</a>
+							<a class="nav-link" href="gallery.html">Our Products</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
 							<a class="nav-link" href="contact.html">Contact</a>
