--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 									class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
-							<a class="nav-link" href="gallery.html">Gallery</a>
+							<a class="nav-link" href="gallery.html">Our Product</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
 							<a class="nav-link" href="contact.html">Contact </a>
