--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
-							<a class="nav-link" href="gallery.html">Gallery</a>
+							<a class="nav-link" href="gallery.html">Our Products</a>
 						</li>
 						<li class="nav-item ml-3 mr-3">
 							<a class="nav-link" id="act1" href="contact.html">Contact <span
